# FakeBook

./: CMakeLists.txt  Report.md
DataStorage/: FriendRequests.txt  Friends.txt  Posts.txt  Users.txt
include/: Authenticator.h  DummyDataGenerator.h  Fakebook.h  Post.h  User.h
src/: Authenticator.cpp  DummyDataGenerator.cpp  FakeBook.cpp  Post.cpp  User.cpp  main.cpp
